--- a/index.html
+++ b/index.html
@@ -3,17 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles.css">
   <title>Juan Rodriguez</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-    }
-    .pdf-container {
-      width: 100%;
-      height: 100vh;
-    }
+    
   </style>
 </head>
 <body>
