--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./styles.css">
-  <title>Juan Rodriguez</title>
+  <title>Juan Rodriguez | Resume</title>
   <style>
     
   </style>
 </head>
 <body>
   <div class="pdf-container">
-    <embed src="Juan_Rodriguez_Resume.pdf" type="application/pdf" width="100%" height="100%" />
-   
+    <embed src="Juan_Rodriguez_Resume.pdf" type="application/pdf" width="100%" height="100%" />   
   </div>
 </body>
 </html>
